# I-3FastAPI

./: .gitignore  LICENSE  README.md  README_RATING.md  main.py  pyproject.toml  requirements.txt  test.db  tests_comments.py
docs/: conf.py  index.rst
docs/source/: index.rst
migrations/: env.py
migrations/versions/: 180061b0340e_comments_upd.py  18074765ce10_add_is_revoker_to_user.py  1e62ef5558ab_.py  495ccdfddc1e_tags_logic.py  4c0a3e742094_ratings_table_rel_pub_user.py  595b82031331_add_field_user_about.py  65de1aa50e6f_back_populates_upd.py  76320cbd5b66_datetime_with_timezone_upd.py  943e481b903e_cascade_del_try_1.py  9815c80bf927_fix_m2m_for_tags.py  a6a95392be5d_upggrade.py  b6f5f97aa155_fix_rel_comment_pub_fix_pubimg.py  c0827e4f1dc2_comments.py  c0c1af175986_init.py  e1270c4a0a3f_pub_image_user_confirmed.py  f8cf685da66d_datetime_with_timezone_upd2.py  fdce80c385bc_init.py
src/: dependency.py  messages.py
src/conf/: config.py
src/database/: db.py  models.py
src/repositories/: comments.py  profile.py  publications.py  ratings.py  tags.py  users.py
src/routing/: auth.py  comments.py  profile.py  publications.py  ratings.py  tags.py  transformations.py  users.py
src/schemas/: comments.py  pub_images.py  publications.py  ratings.py  tags.py  user.py
src/services/: auth.py  cloud_image.py  email.py  profile.py  qr_code.py  roles.py
src/services/cloud_in_ary/: cloud_image.py  errors.py  transformations.py
src/utils/: my_logger.py
tests/: conftest.py  test_auth.py  test_comments.py  test_profile.py  tests_auth.py
(+2 files in other folders)
