[tool.poetry]
name = "i-love-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
alembic = "^1.13.1"
pillow = "^10.2.0"
fastapi-limiter = "^0.1.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
cloudinary = "^1.38.0"
jwt = "^1.3.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
