[tool.poetry]
name = "i-love-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pillow = "^10.2.0"
fastapi-limiter = "^0.1.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
cloudinary = "^1.38.0"
jwt = "^1.3.1"
pydantic-settings = "^2.1.0"
fastapi-mail = "^1.4.1"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
libgravatar = "^1.0.4"
qrcode = {extras = ["pil"], version = "^7.4.2"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
